Tabs Form Field: Prevent Gap (line) Below Tabs

--- a/base/css/admin.less
+++ b/base/css/admin.less
@@ -530,7 +530,7 @@ div.siteorigin-widget-form {
 		&.siteorigin-widget-field-type-tabs .siteorigin-widget-tabs {
 			border-bottom: 1px solid #eee;
 			margin: 0;
-			margin-bottom: -12px;
+			margin-bottom: -13px;
 			padding: 5px 0 0 11px;
 
 			@media (max-width: 500px) {
